--- a/BasicApplication/src/Person/aa.html
+++ b/BasicApplication/src/Person/aa.html
@@ -199,6 +199,11 @@ function set(arr) {
 
 console.log(set([1,1,2,2,3,4,5,6]));
 
+// formatPhoneNumber([1, 2, 3, 4, 5, 6, 7, 8, 9, 0]) ➞ "(123) 456-7890"
+function formatPhoneNumber(numbers) {
+    var repeatedChar = numbers.join('');
+    var repeatedCharStr = repeatedChar
+}
   </script>
 
 </body>
